CliniSign estable: quita node_modules del repo; pacientes, citas, HC, login