@@ -10,6 +10,7 @@ import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
@@ -24,58 +25,62 @@ import java.util.Arrays;
 import java.util.List;
 
 @Configuration
-@EnableMethodSecurity
+@EnableWebSecurity
+@EnableMethodSecurity(prePostEnabled = true)
 @RequiredArgsConstructor
 public class SecurityConfig {
+
     private final JwtFilter jwtFilter;
 
-    // Recuerda definir esto en tu application.properties o application.yml
-    @Value("${cors.allowed-origins}")
+    @Value("${cors.allowed-origins:http://localhost:5173,http://127.0.0.1:5173}")
     private String origins;
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-        return http
+        http
                 .csrf(AbstractHttpConfigurer::disable)
                 .cors(c -> c.configurationSource(corsSource()))
-                .sessionManagement(s -> s.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .authorizeHttpRequests(a -> a
-                        // Rutas públicas sin token
-                        .requestMatchers("/api/auth/**", "/ws/**").permitAll()
+                .sessionManagement(s ->
+                        s.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .authorizeHttpRequests(auth -> auth
+                        // ── Públicos ──────────────────────────────────────────
+                        .requestMatchers("/api/auth/**").permitAll()
+                        .requestMatchers("/ws/**").permitAll()
                         .requestMatchers(HttpMethod.POST, "/api/whatsapp/solicitud-acceso").permitAll()
 
-                        // ✅ ¡AQUÍ ESTÁ LA CORRECCIÓN QUE ELIMINA TU ERROR 403!
-                        // Opción A (Recomendada para prueba): Permitir el envío de mails SIN autenticación
-                        .requestMatchers(HttpMethod.POST, "/api/emails/enviar-consentimiento").permitAll()
+                        // ── Usuarios: autenticado; rol en @PreAuthorize ───────
+                        .requestMatchers("/api/usuarios/**").authenticated()
 
-                        // Opción B (Seguridad real): Si quieres que solo médicos o administradores envíen correos:
-                        // .requestMatchers(HttpMethod.POST, "/api/emails/enviar-consentimiento").hasAnyRole("MEDICO", "ADMINISTRADOR")
+                        // ── Pacientes e historia clínica ─────────────────────
+                        .requestMatchers("/api/pacientes/**").authenticated()
+                        .requestMatchers("/api/historias/**").authenticated()
 
-                        // Rutas exclusivas para Roles
-                        .requestMatchers(HttpMethod.POST, "/api/usuarios").hasRole("ADMINISTRADOR")
-                        .requestMatchers(HttpMethod.PUT, "/api/usuarios/**").hasRole("ADMINISTRADOR")
-                        .requestMatchers(HttpMethod.PATCH, "/api/usuarios/**").hasRole("ADMINISTRADOR")
-                        .requestMatchers(HttpMethod.POST, "/api/consentimientos/*/aprobar").hasAnyRole("MEDICO", "ADMINISTRADOR")
-                        .requestMatchers(HttpMethod.POST, "/api/consentimientos/*/rechazar").hasAnyRole("MEDICO", "ADMINISTRADOR")
+                        // ── Consentimientos: aprobar / rechazar ──────────────
+                        .requestMatchers(HttpMethod.POST, "/api/consentimientos/*/aprobar")
+                        .hasAnyRole("MEDICO", "ADMINISTRADOR")
+                        .requestMatchers(HttpMethod.POST, "/api/consentimientos/*/rechazar")
+                        .hasAnyRole("MEDICO", "ADMINISTRADOR")
 
-                        // El resto de peticiones SÍ necesitan token
+                        // ── Resto ────────────────────────────────────────────
                         .anyRequest().authenticated()
                 )
-                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class)
-                .build();
+                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
+
+        return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsSource() {
         CorsConfiguration c = new CorsConfiguration();
-        // Usamos la variable de entorno (ej: http://localhost:4200)
         c.setAllowedOrigins(Arrays.asList(origins.split(",")));
-        c.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        c.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         c.setAllowedHeaders(List.of("*"));
         c.setAllowCredentials(true);
-        UrlBasedCorsConfigurationSource s = new UrlBasedCorsConfigurationSource();
-        s.registerCorsConfiguration("/**", c);
-        return s;
+        c.setMaxAge(3600L);
+
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", c);
+        return source;
     }
 
     @Bean
@@ -84,7 +89,8 @@ public class SecurityConfig {
     }
 
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration c) throws Exception {
-        return c.getAuthenticationManager();
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration config)
+            throws Exception {
+        return config.getAuthenticationManager();
     }
 }
